Fixed desktop layout bugs

--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -33,5 +33,6 @@
   /* Layout dimensions */
   --header-height: 5rem;
   --max-content-width: 2000px;
+  --max-content-height: 1000px;
   --profile-min-width: 350px;
 }
